fix issue: select from list(not showing image yet)

--- a/css/premiumstyle.css
+++ b/css/premiumstyle.css
@@ -1,5 +1,5 @@
-.catlistholder,
-.selectedcat {
+
+.content {
     text-align: center;
     margin-left: auto;
     margin-right: auto;
@@ -14,6 +14,9 @@
     display: inline-block;
 }
 
+.catlistholder .catimage {
+    display: none;
+}
 .catimage {
     height: 100px;
     width: 100px;
@@ -23,4 +26,8 @@
     vertical-align: top;
     height: 128px;
     line-height: 2;
+}
+
+.admin{
+    display: none;
 }
